[Register] Add new menu

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
   <title>Elftech</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand|Quicksand&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="assets/icon/fox.png">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  
 </head>
 <body>
   <app-root></app-root>
