--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Patrick+Hand|Quicksand&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="assets/icon/fox.png">
   <link rel="stylesheet" href="assets/css/styles.css">
-  
+  <meta name="theme-color" content="#3a9fff"><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+
 </head>
 <body>
   <app-root></app-root>
